--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -1,5 +1,8 @@
+:root {
+  --avatar-size: 40px;
+}
+
 .circle {
-  position: absolute;
   background-color: #ccc;
   border-radius: 50%;
   height: var(--avatar-size);
@@ -8,8 +11,8 @@
 }
 
 .initials {
-  font-size: calc(var(--avatar-size) / 2); /* 50% of parent */
+  font-size: calc(var(--avatar-size) / 2);
   line-height: 1;
   position: relative;
-  top: calc(var(--avatar-size) / 4); /* 25% of parent */
+  top: calc(var(--avatar-size) / 4);
 }
