--- a/src/components/users/users.component.css
+++ b/src/components/users/users.component.css
@@ -1,6 +1,9 @@
 .container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin: 0px 0px 10px 0px;
 }
 
 .avatar {
