fix bug display when research user

--- a/src/components/users/users.component.css
+++ b/src/components/users/users.component.css
@@ -1,7 +1,8 @@
-.container {
+.row-container {
   display: flex;
-  cursor: pointer;
-  margin: 0px 0px 10px 0px;
+  height: 50px;
+  width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  cursor: pointer;
 }
