--- a/src/components/users/users.container.css
+++ b/src/components/users/users.container.css
@@ -1,3 +1,10 @@
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .row-container :hover {
   background-color: #f1f3f4;
 }
